# franka_rdk

./: .gitignore  README.md  README_CN.md  README_cn.md  README_重要代码清单.md
franka_entity_restore/: 00_README_先看这个.md  00_start_here.sh  00_后续代码统一存放说明.md  01_restore_src.sh  02_install_deps.sh  03_build_libfranka.sh  04_build_ros_workspace.sh  05_config_network_two_ips.sh  06_test_franka_network.sh  07_create_read_joints_program.sh  08_run_read_joints.sh  09_realtime_permissions_notes.sh  10_switch_network_ip.sh  11_after_humble_install.sh  12_ROS2_Humble安装后执行说明.md  13_install_franka_description.sh  README_实体Ubuntu恢复Franka环境.md
model_package_meta/: README_RDK_DEPLOY.md  classes.txt  latest_model_sha256.txt  model_info.json
rdk_voice_vision/: check_usb_mic.py  deploy_board_say.py  deploy_boot_voice_vision_service.py  deploy_fast_voice_sorting_daemon.py  deploy_rdk_conversation_sorting_daemon.py  deploy_robot_bridge.py  deploy_vision_voice_assistant.py  patch_rdk_fast_listen_reply.py  patch_rdk_ignore_short_noise.py  test_board_speaker_output.py  test_board_vision_detect.py  upload_latest_package_model.py
ubuntu_franka_bridge/: 00_README_先看这个.md  01_install_everything.sh  06_常见错误和修复.md  (+13 more)
ubuntu_franka_bridge/franka_direct_control/: CMakeLists.txt
ubuntu_franka_bridge/franka_direct_control/config/: actions.conf
ubuntu_franka_bridge/franka_direct_control/src/: franka_action_runner.cpp  franka_read_joints.cpp
ubuntu_franka_bridge/rdk_franka_bridge/: package.xml  setup.py
ubuntu_franka_bridge/rdk_franka_bridge/rdk_franka_bridge/: command_executor.py  command_server.py
(+6 files in other folders)
