<?xml version="1.0"?>
<package format="3">
  <name>rdk_franka_bridge</name>
  <version>0.1.0</version>
  <description>Receive high-level RDK sorting commands and bridge them into ROS 2.</description>
  <maintainer email="student@example.com">RDK Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
